fix mobile width with wrapping on program types

--- a/src/components/programs-api/sass/programs-api.scss
+++ b/src/components/programs-api/sass/programs-api.scss
@@ -126,6 +126,7 @@ $full: 1408px;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                flex-wrap: wrap;
 
                 .row {
                   padding-right: 20px;
